# Mignon-UI

./: .fallowrc.json  .gitignore  CONTRIBUTING.md  Contributor License Agreement  Dockerfile.ci  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  cla.yml  publish-runner.yml  release.yml
docs/: architecture.md  design_system.md  group_chat.md  index.md  memory.md  setup.md  stickers.md
resources/mascot/: mascot_dark_headless.html  mascot_headless.html
src/: App.jsx  config.js  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/context/: CharacterContext.jsx  ChatContext.jsx  SettingsContext.jsx  UIContext.jsx
src/hooks/: useConnectionProfiles.js
src/services/: api.js  characterService.js  connectionService.js  crud.js  db.js  generationService.js  llmClient.js  memorySummarizer.js  migrations.js  promptCompiler.js  rag.js  roomService.js  sceneService.js  seedData.js  tagGenerator.js  tavernParser.js  turnTaking.js  updateService.js  worldService.js
src/styles/: base.css  buttons.css  cards.css  chat.css  chatthemeeditor.css  forms.css  layout.css  loader.css  mobile.css  modals.css  onboarding.css  responsive.css  sidebar.css  updatebanner.css
src/utils/: chatWallpapers.js  (+4 more)
tests/: conftest.py  database.test.js  rag.test.js  security.test.js  test.py  test_database.py  test_generation_service.py  test_prompt_compiler.py  test_psych_parser.py  turnTaking.test.js  update.test.js
(+18 files in other folders)
