[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["Deepak"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
reqwest = { version = "0.12", features = ["blocking"] }
aes-gcm = "0.10"
getrandom = "0.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
url = "2.5"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[profile.release]
opt-level = 3
codegen-units = 16
lto = "thin"
panic = "abort"
